<resources>
    <string name="app_name">mymusic</string>
    <string name="music_player">音乐播放器</string>
    <string name="play">播放</string>
    <string name="music_list">音乐列表</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music_name">音乐名</string>
    <string name="pause">暂停</string>
    <string name="play_music">播放音乐</string>
    <string name="next_music">下一首</string>
    <string name="last_music">上一首</string>
    <string name="menu_home">首页</string>
</resources>